--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -32,53 +32,7 @@
       <!-- /.navbar -->
 
       <!-- Main Sidebar Container -->
-      <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="#" class="brand-link">
-          <span class="brand-text font-weight-light">AdminLTE</span>
-        </a>
-
-        <!-- Sidebar -->
-        <div class="sidebar">
-          <!-- Sidebar user panel (optional) -->
-          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-              <img src="https://via.placeholder.com/150" class="img-circle elevation-2" alt="User Image" />
-            </div>
-            <div class="info">
-              <a href="#" class="d-block">User Name</a>
-            </div>
-          </div>
-
-          <!-- Sidebar Menu -->
-          <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-              <!-- Beranda -->
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="nav-icon fas fa-home"></i>
-                  <p>Beranda</p>
-                </a>
-              </li>
-              <!-- Laporan -->
-              <li class="nav-item">
-                <a href="#" class="nav-link active">
-                  <i class="nav-icon fas fa-file-alt"></i>
-                  <p>Laporan</p>
-                </a>
-              </li>
-              <!-- Login -->
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="nav-icon fas fa-sign-in-alt"></i>
-                  <p>Login</p>
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <!-- /.sidebar-menu -->
-        </div>
-        <!-- /.sidebar -->
-      </aside>
+      <%- include('partials/navbar') %>
 
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper">
